==> project-chip/connectedhomeip/src/platform/nRF5/nRF5Config.cpp <==
#include <platform/internal/CHIPDeviceLayerInternal.h>
#include <platform/nRF5/nRF5Config.h>
#include <core/CHIPEncoding.h>
#include <platform/internal/testing/ConfigUnitTest.h>
#include <support/CodeUtils.h>
#include <support/logging/CHIPLogging.h>
#include "FreeRTOS.h"
#include "fds.h"
#include "mem_manager.h"
#include "semphr.h"

CHIP_ERROR NRF5Config::ReadConfigValue(Key key, bool & val)
{
    CHIP_ERROR err;
    fds_record_desc_t recDesc;
    fds_flash_record_t rec;
    uint32_t wordVal;
    bool needClose = false;

    err = OpenRecord(key, recDesc, rec);
    SuccessOrExit(err);
    needClose = true;

    VerifyOrExit(rec.p_header->length_words == 1, err = CHIP_ERROR_INVALID_ARGUMENT);

    wordVal = Encoding::LittleEndian::Get32((const uint8_t *) rec.p_data);
    val     = (wordVal != 0);

exit:
    if (needClose)
    {
        fds_record_close(&recDesc);
    }
    return err;
}

CHIP_ERROR NRF5Config::ReadConfigValue(Key key, uint32_t & val)
{
    CHIP_ERROR err;
    fds_record_desc_t recDesc;
    fds_flash_record_t rec;
    bool needClose = false;

    err = OpenRecord(key, recDesc, rec);
    SuccessOrExit(err);
    needClose = true;

    VerifyOrExit(rec.p_header->length_words == 1, err = CHIP_ERROR_INVALID_ARGUMENT);

    val = Encoding::LittleEndian::Get32((const uint8_t *) rec.p_data);

exit:
    if (needClose)
    {
        fds_record_close(&recDesc);
    }
    return err;
}

CHIP_ERROR NRF5Config::ReadConfigValue(Key key, uint64_t & val)
{
    CHIP_ERROR err;
    fds_record_desc_t recDesc;
    fds_flash_record_t rec;
    bool needClose = false;

    err = OpenRecord(key, recDesc, rec);
    SuccessOrExit(err);
    needClose = true;

    VerifyOrExit(rec.p_header->length_words == 2, err = CHIP_ERROR_INVALID_ARGUMENT);

    val = Encoding::LittleEndian::Get64((const uint8_t *) rec.p_data);

exit:
    if (needClose)
    {
        fds_record_close(&recDesc);
    }
    return err;
}

CHIP_ERROR NRF5Config::ReadConfigValueStr(Key key, char * buf, size_t bufSize, size_t & outLen)
{
    CHIP_ERROR err;
    fds_flash_record_t rec;
    fds_record_desc_t recDesc;
    bool needClose = false;
    const uint8_t * strEnd;

    err = OpenRecord(key, recDesc, rec);
    SuccessOrExit(err);
    needClose = true;

    strEnd = (const uint8_t *) memchr(rec.p_data, 0, rec.p_header->length_words * kFDSWordSize);
    VerifyOrExit(strEnd != NULL, err = CHIP_ERROR_INVALID_ARGUMENT);

    outLen = strEnd - (const uint8_t *) rec.p_data;

    // NOTE: the caller is allowed to pass NULL for buf to query the length of the stored
    // value.

    if (buf != NULL)
    {
        VerifyOrExit(bufSize > outLen, err = CHIP_ERROR_BUFFER_TOO_SMALL);

        memcpy(buf, rec.p_data, outLen + 1);
    }

exit:
    if (needClose)
    {
        fds_record_close(&recDesc);
    }
    return err;
}

CHIP_ERROR NRF5Config::ReadConfigValueBin(Key key, uint8_t * buf, size_t bufSize, size_t & outLen)
{
    CHIP_ERROR err;
    fds_flash_record_t rec;
    fds_record_desc_t recDesc;
    bool needClose = false;

    err = OpenRecord(key, recDesc, rec);
    SuccessOrExit(err);
    needClose = true;

    VerifyOrExit(rec.p_header->length_words >= 1, err = CHIP_ERROR_INVALID_ARGUMENT);

    // First two bytes are length.
    outLen = Encoding::LittleEndian::Get16((const uint8_t *) rec.p_data);

    VerifyOrExit((rec.p_header->length_words * kFDSWordSize) >= (outLen + 2), err = CHIP_ERROR_INVALID_ARGUMENT);

    // NOTE: the caller is allowed to pass NULL for buf to query the length of the stored
    // value.

    if (buf != NULL)
    {
        VerifyOrExit(bufSize >= outLen, err = CHIP_ERROR_BUFFER_TOO_SMALL);

        memcpy(buf, ((const uint8_t *) rec.p_data) + 2, outLen);
    }

exit:
    if (needClose)
    {
        fds_record_close(&recDesc);
    }
    return err;
}

CHIP_ERROR NRF5Config::WriteConfigValue(Key key, bool val)
{
    CHIP_ERROR err;
    uint32_t storedVal = (val) ? 1 : 0;

    FDSAsyncOp addOrUpdateOp(FDSAsyncOp::kAddOrUpdateRecord);
    addOrUpdateOp.FileId                = GetFileId(key);
    addOrUpdateOp.RecordKey             = GetRecordKey(key);
    addOrUpdateOp.RecordData            = (const uint8_t *) &storedVal;
    addOrUpdateOp.RecordDataLengthWords = 1;

    err = DoAsyncFDSOp(addOrUpdateOp);
    SuccessOrExit(err);

    ChipLogProgress(DeviceLayer, "FDS set: %04" PRIX16 "/%04" PRIX16 " = %s", GetFileId(key), GetRecordKey(key),
                    val ? "true" : "false");

exit:
    return err;
}

CHIP_ERROR NRF5Config::WriteConfigValue(Key key, uint32_t val)
{
    CHIP_ERROR err;

    FDSAsyncOp addOrUpdateOp(FDSAsyncOp::kAddOrUpdateRecord);
    addOrUpdateOp.FileId                = GetFileId(key);
    addOrUpdateOp.RecordKey             = GetRecordKey(key);
    addOrUpdateOp.RecordData            = (const uint8_t *) &val;
    addOrUpdateOp.RecordDataLengthWords = 1;

    err = DoAsyncFDSOp(addOrUpdateOp);
    SuccessOrExit(err);

    ChipLogProgress(DeviceLayer, "FDS set: 0x%04" PRIX16 "/0x%04" PRIX16 " = %" PRIu32 " (0x%" PRIX32 ")", GetFileId(key),
                    GetRecordKey(key), val, val);

exit:
    return err;
}

CHIP_ERROR NRF5Config::WriteConfigValue(Key key, uint64_t val)
{
    CHIP_ERROR err;

    FDSAsyncOp addOrUpdateOp(FDSAsyncOp::kAddOrUpdateRecord);
    addOrUpdateOp.FileId                = GetFileId(key);
    addOrUpdateOp.RecordKey             = GetRecordKey(key);
    addOrUpdateOp.RecordData            = (const uint8_t *) &val;
    addOrUpdateOp.RecordDataLengthWords = 2;

    err = DoAsyncFDSOp(addOrUpdateOp);
    SuccessOrExit(err);

    ChipLogProgress(DeviceLayer, "FDS set: 0x%04" PRIX16 "/0x%04" PRIX16 " = %" PRIu64 " (0x%" PRIX64 ")", GetFileId(key),
                    GetRecordKey(key), val, val);

exit:
    return err;
}

CHIP_ERROR NRF5Config::WriteConfigValueStr(Key key, const char * str)
{
    return WriteConfigValueStr(key, str, (str != NULL) ? strlen(str) : 0);
}

CHIP_ERROR NRF5Config::WriteConfigValueStr(Key key, const char * str, size_t strLen)
{
    CHIP_ERROR err;
    uint8_t * storedVal = NULL;

    if (str != NULL)
    {
        uint32_t storedValWords = FDSWords(strLen + 1);

        storedVal = (uint8_t *) pvPortMalloc(storedValWords * kFDSWordSize);
        VerifyOrExit(storedVal != NULL, err = CHIP_ERROR_NO_MEMORY);

        memcpy(storedVal, str, strLen);
        storedVal[strLen] = 0;

        FDSAsyncOp addOrUpdateOp(FDSAsyncOp::kAddOrUpdateRecord);
        addOrUpdateOp.FileId                = GetFileId(key);
        addOrUpdateOp.RecordKey             = GetRecordKey(key);
        addOrUpdateOp.RecordData            = storedVal;
        addOrUpdateOp.RecordDataLengthWords = storedValWords;

        err = DoAsyncFDSOp(addOrUpdateOp);
        SuccessOrExit(err);

        ChipLogProgress(DeviceLayer, "FDS set: 0x%04" PRIX16 "/0x%04" PRIX16 " = \"%s\"", GetFileId(key), GetRecordKey(key),
                        (const char *) storedVal);
    }

    else
    {
        err = ClearConfigValue(key);
        SuccessOrExit(err);
    }

exit:
    if (storedVal != NULL)
    {
        vPortFree(storedVal);
    }
    return err;
}

CHIP_ERROR NRF5Config::WriteConfigValueBin(Key key, const uint8_t * data, size_t dataLen)
{
    CHIP_ERROR err;
    uint8_t * storedVal = NULL;

    if (data != NULL)
    {
        uint32_t storedValWords = FDSWords(dataLen + 2);

        storedVal = (uint8_t *) pvPortMalloc(storedValWords * kFDSWordSize);
        VerifyOrExit(storedVal != NULL, err = CHIP_ERROR_NO_MEMORY);

        // First two bytes encode the length.
        Encoding::LittleEndian::Put16(storedVal, (uint16_t) dataLen);

        memcpy(storedVal + 2, data, dataLen);

        FDSAsyncOp addOrUpdateOp(FDSAsyncOp::kAddOrUpdateRecord);
        addOrUpdateOp.FileId                = GetFileId(key);
        addOrUpdateOp.RecordKey             = GetRecordKey(key);
        addOrUpdateOp.RecordData            = storedVal;
        addOrUpdateOp.RecordDataLengthWords = storedValWords;

        err = DoAsyncFDSOp(addOrUpdateOp);
        SuccessOrExit(err);

        ChipLogProgress(DeviceLayer, "FDS set: 0x%04" PRIX16 "/0x%04" PRIX16 " = (blob length %" PRId32 ")", GetFileId(key),
                        GetRecordKey(key), dataLen);
    }

    else
    {
        err = ClearConfigValue(key);
        SuccessOrExit(err);
    }

exit:
    if (storedVal != NULL)
    {
        vPortFree(storedVal);
    }
    return err;
}

CHIP_ERROR NRF5Config::ClearConfigValue(Key key)
{
    CHIP_ERROR err;

    FDSAsyncOp delOp(FDSAsyncOp::kDeleteRecordByKey);
    delOp.FileId    = GetFileId(key);
    delOp.RecordKey = GetRecordKey(key);

    err = DoAsyncFDSOp(delOp);
    SuccessOrExit(err);

    ChipLogProgress(DeviceLayer, "FDS delete: 0x%04" PRIX16 "/0x%04" PRIX16, GetFileId(key), GetRecordKey(key));

exit:
    return err;
}

bool NRF5Config::ConfigValueExists(Key key)
{
    ret_code_t fdsRes;
    fds_record_desc_t recDesc;
    fds_find_token_t findToken;

    // Search for the requested record.
    memset(&findToken, 0, sizeof(findToken));
    fdsRes = fds_record_find(GetFileId(key), GetRecordKey(key), &recDesc, &findToken);

    // Return true iff the record was found.
    return fdsRes == NRF_SUCCESS;
}
